Actions
Bug #10648
closedsysevent: NULL pointer errors
Start date:
2019-04-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
In file included from ../../common/sys/param.h:48:0, from ../../common/io/sysevent.c:31: ../../common/io/sysevent.c: In function 'sysevent_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/sysevent.c:706:21: note: in expansion of macro 'NULL' 0, DDI_PSEUDO, NULL) == DDI_FAILURE) { ^~~~ In file included from ../../common/io/sysevent.c:37:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ In file included from ../../common/sys/param.h:48:0, from ../../common/io/sysevent.c:31: ../../common/io/sysevent.c: At top level: ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/sysevent.c:745:2: note: in expansion of macro 'NULL' NULL, /* aread */ ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'sysevent_cb_ops.cb_rev') #define NULL ((void *)0) ^ ../../common/io/sysevent.c:745:2: note: in expansion of macro 'NULL' NULL, /* aread */ ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 280798bab7492ab1628d72247ebe1872218d98b3
commit 280798bab7492ab1628d72247ebe1872218d98b3 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-05T06:06:50.000Z 10648 sysevent: NULL pointer errors Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions